# comfystream

./: .dockerignore  .editorconfig  .gitignore  CONTRIBUTING.md  Dockerfile.byow  PR_SUMMARY.md  README-BYOW.md  README.md  __init__.py  audio_example.py  benchmark.py  devcontainer.json  example.py  install.py  prestartup_script.py  pyproject.toml  requirements.txt  setup.py
.devcontainer/: Dockerfile  Dockerfile.base  README.md  build-tensorrt.sh  devcontainer.json  entrypoint.sh  extra_model_paths.yaml  install-nodes.sh  patchrc  post-create.sh  supervisord.conf  welcome.txt
.github/: codeql-config.yaml  dependabot.yaml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: comfyui-base.yaml  docker.yaml  opencv-cuda-artifact.yml  opencv-cuda-build.yaml  release.yaml  test.yaml
configs/: comfy.toml  models.yaml  nodes.yaml  warmup_workflow.yaml
docker/: Dockerfile  Dockerfile.base  Dockerfile.opencv  Dockerfile.opencv-cuda  README.md  entrypoint-byow.sh  entrypoint.sh  opencv-build.sh  supervisord.conf
docs/: opencv-cuda-build.md
nodes/: __init__.py  server_manager.py  settings_storage.py
nodes/api/: __init__.py
nodes/audio_utils/: __init__.py  apply_whisper.py  load_audio_tensor.py  pitch_shift.py  save_asr_response.py  save_audio_tensor.py
nodes/cudagraph_mod/: prestartup_script.py
nodes/launcher/: __init__.py  launcher_node.py
nodes/native_utils/: __init__.py  load_image_base64.py  send_image_websocket.py
nodes/tensor_utils/: __init__.py  load_tensor.py  prestartup_script.py  save_tensor.py  save_text_tensor.py
nodes/video_stream_utils/: __init__.py  primary_input_load_image.py
nodes/web/: __init__.py
scripts/: README.md  monitor_pid_resources.py  opencv-build.sh  opencv-cuda-deps.sh  opencv-package.sh  requirements.txt  spinup_comfystream_tensordock.py
scripts/ansible/: inventory.yaml
scripts/config/: cloud_init_comfystream.yaml  cloud_init_comfystream_template.yaml
scripts/templates/: cloud_init_comfystream.yaml.j2  comfystream.caddy.j2
server/: api.py  app.py  app_api.py  byoc.py  config.py  frame_buffer.py  frame_processor.py  pipeline.py  pipeline_api.py  utils.py
server/api/: api.py
server/http_streaming/: __init__.py  routes.py  tokens.py
server/metrics/: __init__.py  pipeline_stats.py  prometheus_metrics.py  stream_stats.py  stream_stats_manager.py  track_stats.py
server/public/: stream.html
server/utils/: __init__.py  fps_meter.py  utils.py
settings/: comfystream_settings.json
src/comfystream/: __init__.py  client.py  client_api.py  exceptions.py  (+6 more)
test/: test_utils.py
ui/: README.md  next.config.ts  package-lock.json  package.json  tsconfig.json
workflows/: aniverse-lcm-trt-example-workflow.json  audio-tensor-utils-example-workflow.json  audio-whsiper-example-workflow.json  depth-anything-v2-trt-example-workflow.json  depth-bg-black-gpu-workflow.json  depth-bg-blur-gpu-workflow.json  liveportait.json  load-preview-image-example-workflow.json  regional_lora.json  sd15-tensorrt.json  sd15-trt-workflow.json  sd15_multi_cnet_depthanything_face.json  sd15_multi_cnet_depthanything_o2o.json  tensor-utils-example-workflow.json
(+135 files in other folders)
