[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "comfystream"
description = "Build Live AI Video with ComfyUI"
version = "0.1.5"
license = { file = "LICENSE" }
dynamic = ["dependencies"]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[project.scripts]
setup-nodes = "comfystream.scripts.setup_nodes:setup_nodes"
setup-models = "comfystream.scripts.setup_models:setup_models"

[project.urls]
Repository = "https://github.com/yondonfu/comfystream"

[tool.comfy]
PublisherId = "livepeer-comfystream"
DisplayName = "ComfyStream"
Icon = "https://raw.githubusercontent.com/livepeer/comfystream-docs/main/logo/icon-light-120px.svg" # SVG, PNG, JPG or GIF (MAX. 800x400px)

[tool.setuptools]
package-dir = {"" = "src"}
packages = {find = {where = ["src", "nodes"]}}

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
