[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "comfystream"
description = "Build Live AI Video with ComfyUI"
version = "0.1.5"
license = { file = "LICENSE" }
dependencies = [
    "asyncio",
    "pytrickle @ git+https://github.com/livepeer/pytrickle.git@de37bea74679fa5db46b656a83c9b7240fc597b6",
    "comfyui @ git+https://github.com/hiddenswitch/ComfyUI.git@e62df3a8811d8c652a195d4669f4fb27f6c9a9ba",
    "aiortc",
    "aiohttp",
    "aiohttp_cors",
    "toml",
    "twilio",
    "prometheus_client",
    "librosa"
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[project.urls]
Repository = "https://github.com/yondonfu/comfystream"

[tool.comfy]
PublisherId = "livepeer-comfystream"
DisplayName = "ComfyStream"
Icon = "https://raw.githubusercontent.com/livepeer/comfystream-docs/main/logo/icon-light-120px.svg" # SVG, PNG, JPG or GIF (MAX. 800x400px)

[tool.setuptools]
package-dir = {"" = "src"}
packages = {find = {where = ["src", "nodes"]}}

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
